@@ -234,18 +234,6 @@ Write each command to standard error (preceded by a
 .Sq +\  )
 before it is executed.
 Useful for debugging.
-.It Fl q Em quietprofile
-If the
-.Fl v
-or
-.Fl x
-options have been set, do not apply them when reading
-initialization files, these being
-.Pa /etc/profile ,
-.Pa .profile ,
-and the file specified by the
-.Ev ENV
-environment variable.
 .It Fl I Em ignoreeof
 Ignore EOF's from input when interactive.
 .It Fl i Em interactive
